[tool.poetry]
# todo: Add classifiers
name = "django-scan-models"
version = "0.1.3"
description = "Django scan models: Parse django models to frontend validation"
authors = ["Jessie Liauw A Fong <jessielaff@live.nl>"]
packages = [
    { include = "scan_models" }
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
mysqlclient = "^1.4.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
